bppackaging/src/objects/GL_Account__c.object
<CustomObject>
    <fields>
        <fullName>MYOB_Account_Name__c</fullName>
        <label>MYOB Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MYOB_Account_Number__c</fullName>
        <label>MYOB Account Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Allocation Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Invoice Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Inventory Accrual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MYOB_Account_Name__c</columns>
        <columns>MYOB_Account_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GLA-{00000}</displayFormat>
        <label>GL Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>